<resources>
    <string name="app_name">GYM management system app - admin version</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="all_receipts">All receipts</string>
    <string name="messages">Messages</string>
    <string name="opening_hours">Opening hours</string>
    <string name="receipt_adapter_default">Receipt ID HERE</string>
    <string name="receipt_image">receipt image</string>
    <string name="receipt_adapter_date_default_value">01/01/1970 – 00:00</string>
    <!-- Strings used for fragments for navigation -->

    <string name="add_new_receipt">New Receipt</string>
    <string name="enter_receipt_title">Enter receipt title</string>
    <string name="selected_user">Selected User:</string>
    <string name="enter_amount">Enter amount</string>
    <string name="default_name">default name</string>
    <string name="person_image">person_image</string>
    <string name="none_yet">None yet!</string>
    <string name="default_amount">0.00€</string>
    <string name="delete_receipt">Delete receipt</string>
    <string name="add_message">Add message</string>
    <string name="preferences">Preferences</string>
    <string name="default_message_title">Default Message title</string>
    <string name="default_message_summary_long">Default message summary. Here we will test long messages in order to keep only the first 3 lines of the message. At the end, we will add three dots in order to inform user that this message is larger that just 3 lines!</string>
    <string name="to_default_user">Getting users…</string>
    <string name="add_message_title">Add message title</string>
    <string name="add_message_summary">Add message summary</string>
    <string name="save_message">save message</string>
    <string name="important_message">Important message</string>
    <string name="title_activity_preview_message_acitivty">PreviewMessageAcitivty</string>
    <string name="message_title">Message Title</string>
    <string name="message_body">Message Body</string>
    <string name="opening_hours_info">Choose a day and if you want, change the time that your Gym will open and close</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="save_preference">Save preference</string>
    <string name="default_open_hour">8:00</string>
    <string name="default_close_hour">21:00 (9:00 pm)</string>
    <string name="day_off">Day off</string>
    <string name="working_day">Working day</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="login">Login</string>
    <string name="username">Enter username (email account)</string>
    <string name="password">Enter password</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="please_wait">Please wait…</string>
    <string name="create">Create</string>
    <string name="save_receipt">Save receipt</string>
    <string name="only_important">Only important</string>
    <string name="all_messages">All messages</string>
    <string name="single_receipts">Single receipts</string>
    <string name="monthly_receipts">Monthly receipts</string>
    <string name="annually_receipts">Annually receipts</string>
    <string name="internet_connection_error">Please enable internet connection first</string>
    <string name="admin_options">Admin options</string>
    <string name="single_receipt">Single Receipt</string>
    <string name="monthly_receipt">Monthly Receipt</string>
    <string name="annual_receipt">Annual Receipt</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="non_paid_receipts">Non - paid receipts</string>
    <string name="paid_receipts">Paid receipts</string>
    <string name="monthly_revenue">Monthly stats</string>
    <string name="monthly_stats_summary">Total monthly stats or per user</string>
    <string name="annually_stats">Annually stats</string>
    <string name="annual_stats_summary">Total annual stats or per user</string>
    <string name="selected_year">Selected year:</string>
    <string name="options">Options</string>
    <string name="edit_message">Edit message</string>
    <string name="edit_message_summary">You can change only title and summary of the message</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_message_summary">Delete the current message from database</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save changes</string>
    <string name="check_receipt">Check receipt</string>
    <string name="did_the_user_pay_the_receipt">Did the user pay the receipt?</string>
    <string name="this_option_will_permanent_delete_this_receipt">This option will permanent delete this receipt</string>
    <string name="gym_admin_version">GYM (Admin version)</string>
    <string name="first_5_messages_if_available">All non-filtered messages you have created…</string>
    <string name="first_5_important_messages">First 5 important messages</string>
    <string name="add_a_message">Add a message</string>
    <string name="cannot_found_any_message_try_to_add_a_message_by_clicking_bottom_right_button">Cannot found any message. Try to add a message by clicking bottom right button.</string>
    <string name="set_gym_schedule">Set GYM schedule</string>
    <string name="selected_day">Selected day:</string>
    <string name="choose_a_day">Choose a day</string>
    <string name="configure_schedule">Configure schedule</string>
    <string name="close_at">Close at:</string>
    <string name="open_at">Open at: </string>
    <string name="add_new_user">Add new user</string>
    <string name="a_new_person_want_to_subscribe_to_your_gym_add_him_her">A new person want to subscribe to your GYM? Add him/her!</string>
    <string name="remove_existing_user">Remove existing user</string>
    <string name="delete_user_summary">Remove an already subscribed member</string>
    <string name="no_receipts_here">No receipts here…</string>
    <string name="not_any_receipt_has_been_added_in_your_gym_try_add_some">Not any receipt has been added in your GYM. Try add some!</string>
    <string name="add_receipt_summary">Create a new receipt for any user. Note that, you can only choose one user to add the receipt.</string>
</resources>