<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_twotone_message"
        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/receipt_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/image_message"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/layoutContentInfoReceipt">

        <TextView
            android:id="@+id/listViewAdapterMessages_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/default_message_title"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/listViewAdapterMessages_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_message_summary_long"
            android:layout_below="@+id/listViewAdapterMessages_title"
            android:maxLines="3"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/listViewAdapterMessages_toUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_default_user"
            android:layout_below="@+id/listViewAdapterMessages_summary"
            android:layout_marginTop="5dp"
            android:textStyle="bold|italic"
            android:textColor="?colorPrimary"/>

        <TextView
            android:id="@+id/listViewAdapterMessages_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_adapter_date_default_value"
            android:layout_below="@+id/listViewAdapterMessages_toUser"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</RelativeLayout>