<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="?selectableItemBackground"
    android:id="@+id/cardReceiptRL">

    <ImageView
        android:id="@+id/image_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_twotone_receipt_long"
        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/receipt_image" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/image_receipt"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/layoutContentInfoReceipt"
        android:layout_toStartOf="@+id/listviewAdapter_iconPaid">

        <TextView
            android:id="@+id/listViewAdapter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_adapter_default"
            android:textStyle="bold"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/listViewAdapter_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_adapter_date_default_value"
            android:layout_below="@+id/listViewAdapter_title"/>

        <TextView
            android:id="@+id/listViewAdapter_toUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_wait"
            android:layout_below="@+id/listViewAdapter_date"
            android:layout_marginTop="5dp"
            android:textStyle="bold|italic"
            android:textColor="?colorPrimary"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/listviewAdapter_iconPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_twotone_check_circle"
        android:layout_toStartOf="@+id/layoutReceiptAmount"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/layoutReceiptAmount"
        android:layout_marginEnd="20dp"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_corners_receipt_paid_layout">

        <TextView
            android:id="@+id/listviewAdapter_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_amount"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/colorControlNormal"
        android:alpha="0.3"
        android:layout_marginStart="65dp"
        android:layout_below="@+id/layoutContentInfoReceipt"/>

</RelativeLayout>