<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/iconCard"
        app:cardElevation="4dp"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_round_edit_message"
            android:layout_margin="16dp"
            />

    </com.google.android.material.card.MaterialCardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/iconCard"
        android:background="@drawable/dialog_rounded_corners">

        <TextView
            android:id="@+id/optionTitle"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_message"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageTitleEditLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/optionTitle"
            app:startIconDrawable="@drawable/ic_round_message_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_title"
                android:id="@+id/messageTitleTIET"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageSummaryEditLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/messageTitleEditLayout"
            app:startIconDrawable="@drawable/ic_round_message_body">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message_body"
                android:id="@+id/messageSummaryTIET"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_below="@+id/messageSummaryEditLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/cancel_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_toStartOf="@+id/save_action"
            android:layout_below="@+id/messageSummaryEditLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>

</RelativeLayout>